PROJECT/MODULES/MANAGEMENT/EC2/sg.tf
resource "aws_security_group" "default-ssh" {
  name        = "default-ssh"
  description = "Default SSH Access Public"
  vpc_id      = "${var.MANAGEMENT_VPC_ID}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "default-jenkins" {
  name        = "default-jenkins"
  description = "Default WEB Access Public"
  vpc_id      = "${var.MANAGEMENT_VPC_ID}"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
